2008-07-27  Sam Steingold  <sds@gnu.org>

	fix bug #[ 2029069 ]: stack overflow with gethash
	* hashtabl.d (hashcode3_atom, hashcode3stable_atom, sxhash_atom):
	accept level argument (ignore it because EQUAL hash code does not
	recurse on atoms)
	(HASHCODE_MAX_LEVEL): rename from HASHCODE_TREE_MAX_LEVEL
	(HASHCODE_NEED_LEAVES): rename from HASHCODE_TREE_NEED_LEAVES
	(hashcode_tree_rec): pass level+1 to hashcode_leaf
	(hashcode_tree): accept level argument
	(hashcode3, hashcode3stable, hashcode4, sxhash): pass level=0 to
	hashcode_tree()
	(hashcode4_): new macro: like hashcode4(), but pass level+1 to
	hashcode_tree()
	(hashcode4_atom, hashcode4_vector, hashcode4_vector_T): accept
	level argument
	(hashcode4_vector): limit count to HASHCODE_NEED_LEAVES

2008-07-27  Sam Steingold  <sds@gnu.org>

	* hashtabl.d (hashcode_pathname): extracted
	(hashcode3_atom, hashcode3stable_atom): use it

2008-07-26  Sam Steingold  <sds@gnu.org>

	* control.d (skip_declarations): remove
	(finish_flet): rename the last argument and revert its meaning
	(FLET, MACROLET, FUNCTION-MACRO-LET): update finish_flet calls
	NB: FUNCTION-MACRO-LET now barfs on declarations in both compiled
	and interpreted code

2008-07-24  Sam Steingold  <sds@gnu.org>

	* format.lisp (format-logical-block-parse): uniform error messages

2008-07-24  Sam Steingold  <sds@gnu.org>

	* utils/clispload.lsp (*expected-failures*): add eval-when.15 and
	eval-when.17 (/= EVAL :EXECUTE) & (/= LOAD :LOAD-TOPLEVEL)

2008-07-23  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-LABELS, c-FLET, c-MACROLET): rework the "ANSI
	SPECIAL declarations" patch to fix a LABELS flaw

2008-07-23  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (check-fdef-name): add local macro
	(c-FLET, c-LABELS, c-FUNCTION-MACRO-LET, c-GENERIC-FLET)
	(c-GENERIC-LABELS): use it

2008-07-23  Sam Steingold  <sds@gnu.org>

	* init.lisp (%expand-form): FLET, LABELS, MACROLET
	respect the SPECIAL declarations, as per ANSI