@@ -43,6 +43,7 @@ mkfifo mkdir creat mkstemp tempnam mkdtemp dnl
 getegid geteuid getgid getuid setegid seteuid setgid setuid dnl
 setreuid setregid getgroups setgroups dnl
 fchmod fchown fstat link stat symlink utime mknod chmod umask fsync sync dnl
+ftruncate truncate dnl
 erf erfc lgamma tgamma fstatvfs statvfs getpriority setpriority dnl
 crypt encrypt setkey GlobalMemoryStatusEx strerror gethostid)
 AC_FUNC_CHOWN
