@@ -13,7 +13,7 @@
    #+(or :win32 :cygwin) #:file-properties #+unix #:make-xterm-io-stream
    #:priority #:openlog #:setlogmask #:syslog #:closelog #:process-id #:getppid
    #:getsid #:setsid #:getpgrp #:setpgrp #:setreuid #:setregid #:kill #:sync
-   #:errno #:strerror #:gethostid
+   #:errno #:strerror #:gethostid #:file-size
    #:erf #:erfc #:j0 #:j1 #:jn #:y0 #:y1 #:yn #:tgamma #:lgamma #:ffs))
 
 (pushnew :syscalls *features*)
@@ -43,6 +43,8 @@
   "Lock the stream, execute the body, unlock the stream."
   `(unwind-protect (progn (stream-lock ,stream t ,@options) ,@body)
      (stream-lock ,stream nil ,@options)))
+;;; ============================================================
+(defsetf file-size %set-file-size)
 ;;; ============================================================
 (defun syslog (severity facility format &rest args)
   (%syslog severity facility (apply #'format nil format args)))
